Fix(NavigationHeader.tsx): add overflow hidden to root in share.css

--- a/frontend/src/component/Common/css/share.css
+++ b/frontend/src/component/Common/css/share.css
@@ -15,10 +15,13 @@ html {
 	box-sizing: border-box !important;
 }
 
+
 /* ----------------------------------------------*/
 /* 01 Body 			                            		 */
 /* ----------------------------------------------*/
-
+#root {
+	overflow: hidden;
+}
 /*tag*/
 ul {
 	list-style: none;
